--- a/public/style.css
+++ b/public/style.css
@@ -12,14 +12,15 @@ canvas {
     height: 100%;
 }
 #menu {
-    width: 100px;
+    width: 300px;
     height: 200px;
-    border: gray 2px solid;
-    border-radius: 4px;
+    border: rgb(255, 255, 255) 1px solid;
+    border-radius: 16px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 }
 .background {
     width: 100%;
@@ -27,16 +28,42 @@ canvas {
     position: absolute;
     top:0;
     left:0;
-    background-color: rgba(255, 255, 255, 0.5);
-    filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.75);
+    filter: blur(4px);
 }
 .content {
     width: 100%;
     height: 100%;
+    padding: 1rem;
     position: absolute;
     top:0;
     left:0;
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+#title {
+    color: black;
+    margin-bottom: 1rem;
+}
+#nameInput {
+    width: 100%;
+    height: 30px;
+    border: gray 1px solid;
+    border-radius: 16px;
+}
+#nameInput::placeholder {
+    text-indent: 10px;
+}
+#errorText {
+
+}
+#joinBtn {
+    width: 100%;
+    height: 30px;
+    border-radius: 16px;
 }
 .hide {
     display: none
