--- a/public/style.css
+++ b/public/style.css
@@ -28,8 +28,8 @@ canvas {
     position: absolute;
     top:0;
     left:0;
-    background-color: rgba(255, 255, 255, 0.75);
-    filter: blur(4px);
+    background-color: rgba(255, 255, 255, 0.85);
+    filter: blur(2px);
 }
 .content {
     width: 100%;
@@ -46,19 +46,21 @@ canvas {
 }
 #title {
     color: black;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 #nameInput {
     width: 100%;
     height: 30px;
     border: gray 1px solid;
     border-radius: 16px;
+    text-indent: 10px;
 }
 #nameInput::placeholder {
     text-indent: 10px;
 }
 #errorText {
-
+    height: 24px;
+    color: rgb(231, 15, 15);
 }
 #joinBtn {
     width: 100%;
