--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,37 @@ canvas {
     display: none
 }
 
+.leaderBoard {
+    height: fit-content;
+    width: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.75);
+    border: 2px gray solid;
+    color: white;
+}
+.main, .currentPlayer {
+    width: 100%;
+}
+.main {
+    border-bottom: 2px gray solid;
+}
+.player {
+    min-width: 100%;
+    padding: 10px;
+    padding-inline: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.kill {
+    color: rgb(255, 57, 57);
+}
+
 .announceContainer {
     height: fit-content;
     width: fit-content;
@@ -88,6 +119,7 @@ canvas {
     flex-direction: column;
     align-items: flex-end;
     row-gap: 5px;
+    z-index: 99;
 }
 .announce {
     width: fit-content;
@@ -101,7 +133,6 @@ canvas {
     align-items: center;
     justify-content: center;
     column-gap: 20px;
-    z-index: 99;
     font-weight: 900;
     font-size: 25px;
     text-shadow: black 1px 1px 3px;
