--- a/public/style.css
+++ b/public/style.css
@@ -137,6 +137,7 @@ canvas {
     font-weight: 900;
     font-size: 25px;
     text-shadow: black 1px 1px 3px;
+    /* color: rgba(255, 255, 255, 0.75); */
 }
 .gunIcon {
     width: 20px;
@@ -184,7 +185,7 @@ canvas {
     }
 }
 
-.rotateDeviceAnnounce {
+.fullScreenRequest {
     width: 100%;
     height: 100%;
     display: flex;
@@ -192,9 +193,25 @@ canvas {
     align-items: center;
     background-color: black;
     z-index: 100;
-position: absolute;
-top: 0;
-left: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.fullScreenRequest h1 {
+    color: gray;
+}
+
+.rotateDeviceAnnounce {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    z-index: 101;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 :root{
     --phone-color: #2a2a2a;
@@ -290,6 +307,21 @@ left: 0;
         transform: translate(20vw, -15vw);
     }
 }
-    .hide {
-        display: none
-    }
+
+.exitBtn {
+    width: 60px;
+    height: 60px;
+    padding: 10px;
+    position: absolute;
+    top: 30vh;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    z-index: 99;
+    background-color: transparent;
+    border: none;
+}
+
+.hide {
+    display: none
+}
